# llm-finetune

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tfyignore  0_ds_z0_config.json  1_ds_z1_config.json  2_ds_z1_offload_optimizer_config.json  3_ds_z2_config.json  4_ds_z2_offload_optimizer_config.json  5_ds_z3_config.json  6_ds_z3_offload_param_config.json  7_ds_z3_offload_optimizer_config.json  8_ds_z3_offload_param_offload_optimizer_config.json  Dockerfile  Dockerfile-notebook  README.md  base-requirements.txt  checkpoint_utils.py  config-base.yaml  config.yaml  custom_prompt_strategies.py  data_utils.py  dist_utils.py  finetune.ipynb  mlfoundry_utils.py  monkey_patch.py  notebook-requirements.txt  post-pytorch-requirements.txt  pytorch-requirements.txt  reporting.py  requirements.txt  sample_run.sh  torch-requirements.txt  train.args  train.old.py  train.py  utils.py
.github/workflows/: build-and-push-image.yaml
.jp_app_launcher/: config.yaml  jp_app_launcher.yaml
deepspeed_configs/: 0_ds_z0_config.json  1_ds_z1_config.json  2_ds_z1_offload_optimizer_config.json  3_ds_z2_config.json  4_ds_z2_offload_optimizer_config.json  5_ds_z3_config.json  6_ds_z3_offload_param_config.json  7_ds_z3_offload_optimizer_config.json  8_ds_z3_offload_param_offload_optimizer_config.json
plugins/axolotl_truefoundry/: pyproject.toml
plugins/axolotl_truefoundry/axolotl_truefoundry/: __init__.py
sample_data/: chatalpaca-openai-1k.jsonl  multiply-1k.jsonl
scripts/: convert_lima.py
